XQueryParser: Implement XQuery 1.0 (A.1) [96] DirElemConstructor.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -24,6 +24,7 @@ parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
+parser.error.incomplete-open-tag=XPST0003: Expected '>', '/>' or attribute name.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
 parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
