XQueryParser: Implement XQuery 1.0 (A.1) [98|149-150] DirAttributeValue | (Quot|Apos)AttrContentChar.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -29,6 +29,7 @@ parser.error.incomplete-open-tag=XPST0003: Expected '>', '/>' or attribute name.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
 parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
+parser.error.mismatched-exclosed-expr=XPST0003: Closing expression block '}' without associated open expression block '{'.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
