XQueryParser: Implement XQuery 1.0 (A.1) [105-106] DirPIConstructor | DirPIContents.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -12,6 +12,7 @@ parser.error.expected-module-type=XPST0003: Missing library 'module' declaration
 parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.expected-option-string=XPST0003: Missing option value string.
+parser.error.expected-pi-contents=XPST0003: Processing instruction contents expected.
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-qname-or-keyword=XPST0003: Missing qualified name or keyword: {0}.
@@ -35,6 +36,7 @@ parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in 
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
+parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
 parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
 xquery.files.filetype.description=XQuery Language Support
 # suppress inspection "UnusedProperty"
