XQueryParser: Implement XQuery 1.0 (A.1) [101|107] DirElemContent | CDataSection.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,7 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-attribute-string=XPST0003: Missing attribute string.
