--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -17,6 +17,7 @@ parser.error.expected-pi-contents=XPST0003: Processing instruction contents expe
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-qname-or-keyword=XPST0003: Missing qualified name or keyword: {0}.
+parser.error.expected-qname-or-token=XPST0003: Missing qualified name or ''{0}''.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
 parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
