--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -73,6 +73,12 @@ xquery.settings.colors.identifier=Identifier
 xquery.settings.colors.keyword=Keyword
 xquery.settings.colors.number=Number
 xquery.settings.colors.string=String
+xquery.settings.colors.xml.tag=Direct XML Construction//Tag
+xquery.settings.colors.xml.tag.name=Direct XML Construction//Tag Name
+xquery.settings.colors.xml.attribute.name=Direct XML Construction//Attribute Name
+xquery.settings.colors.xml.attribute.value=Direct XML Construction//Attribute Value
+xquery.settings.colors.xml.entity.reference=Direct XML Construction//Entity Reference
+xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Character
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
