--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -14,6 +14,7 @@ parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
 parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-pi-contents=XPST0003: Processing instruction contents expected.
+parser.error.expected-pragma-contents=XPST0003: Pragma contents expected.
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-qname-or-token=XPST0003: Missing qualified name or ''{0}''.
