XQueryParser: Report expected end-of-file errors for tokens after the main expression.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -7,6 +7,7 @@ parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-attribute-string=XPST0003: Missing attribute string.
 parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed expression start '''{''' or keyword: {0}.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
+parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
