--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -21,6 +21,7 @@ parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-qname-or-token=XPST0003: Missing qualified name or ''{0}''.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
+parser.error.expected-variable-reference-or-keyword=XPST0003: Missing variable reference marker '''$''' or keyword: {0}.
 parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
 parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
