XQueryParser: Implement XQuery 1.0 (A.1) [33] FLWORExpr (return only).

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -18,7 +18,6 @@ parser.error.expected-pi-contents=XPST0003: Processing instruction contents expe
 parser.error.expected-pragma-contents=XPST0003: Pragma contents expected.
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
 parser.error.expected-qname=XPST0003: Missing qualified name.
-parser.error.expected-qname-or-token=XPST0003: Missing qualified name or ''{0}''.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
 parser.error.expected-variable-reference-or-keyword=XPST0003: Missing variable reference marker '''$''' or keyword: {0}.
@@ -42,6 +41,7 @@ parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualifi
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' in qualified name.
+parser.error.return-without-flwor=XPST0003: 'return' keyword in non-FLWOR expression.
 parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
 parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
