XQueryParser: Implement XQuery 1.0 (A.1) [36] LetClause.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -20,6 +20,7 @@ parser.error.expected-prolog-body=XPST0003: Prolog header statements must be pla
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
+parser.error.expected-variable-assign-or-keyword=XPST0003: Missing variable assignment operator ''':=''' or keyword: {0}.
 parser.error.expected-variable-reference-or-keyword=XPST0003: Missing variable reference marker '''$''' or keyword: {0}.
 parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
 parser.error.expected-version-string=XPST0003: Missing version string.
