XQueryParser: Implement XQuery Update Facility 1.0 (A.1) [141] RevalidationDecl.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -45,6 +45,7 @@ parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' i
 parser.error.return-without-flwor=XPST0003: 'return' keyword in non-FLWOR expression.
 parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
+parser.error.update-facility.1.0=XPST0003: This expression requires the Update Facility 1.0 or later extension.
 parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
 parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
