--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@ src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.xq text eol=lf
+src/test/resources/tests/parser/xquery-update-1.0/*.txt text eol=lf
+src/test/resources/tests/parser/xquery-update-1.0/*.xq text eol=lf
