--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,3 +1,4 @@
+annotator.requires.xquery.version=XPST0003: This expression requires XQuery {0} or later.
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
@@ -46,7 +47,6 @@ parser.error.return-without-flwor=XPST0003: 'return' keyword in non-FLWOR expres
 parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
 parser.error.update-facility.1.0=XPST0003: This expression requires the Update Facility 1.0 or later extension.
-parser.error.version-decl.3.0=XPST0003: Encoding-only xquery declarations require XQuery 3.0 or later.
 parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
