Extend the XQuerySupportedConstructAnnotator to check Update Facility extensions.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,4 +1,5 @@
 annotator.requires.xquery.version=XPST0003: This expression requires XQuery {0} or later.
+annotator.requires.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
