--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -72,6 +72,7 @@ xquery.implementation.xquery-scripting-10=XQuery Scripting Extension 1.0
 xquery.implementation.xquery-update-10=XQuery Update Facility 1.0
 # suppress inspection "UnusedProperty"
 xquery.implementation.xquery-update-30=XQuery Update Facility 3.0
+xquery.settings.colors.annotation=Annotation
 xquery.settings.colors.bad.character=Invalid Character
 xquery.settings.colors.comment=Comment
 xquery.settings.colors.entity.reference=Entity Reference
