--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -49,6 +49,7 @@ parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not al
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
 requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
+requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
 requires.feature.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 xquery.files.filetype.description=XQuery Language Support
