--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -8,6 +8,7 @@ parser.error.expected-attribute-string=XPST0003: Missing attribute string.
 parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed expression start '''{''' or keyword: {0}.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-eof=XPST0003: Expected end of file.
+parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI literal.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
@@ -27,6 +28,7 @@ parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.incomplete-attribute-value=XPST0003: Unclosed attribute value.
+parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal literal.
 parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
