--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -28,7 +28,7 @@ parser.error.expected-version-string=XPST0003: Missing version string.
 parser.error.end-of-cdata-section-without-start=XPST0003: End of CDATA section marker found without a '<![CDATA[' start of CDATA section marker.
 parser.error.end-of-comment-without-start=XPST0003: End of comment marker found without a ''{0}'' start of comment marker.
 parser.error.incomplete-attribute-value=XPST0003: Unclosed attribute value.
-parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal literal.
+parser.error.incomplete-braced-uri-literal=XPST0003: Unclosed braced URI literal.
 parser.error.incomplete-cdata-section=XPST0003: Unclosed CDATA section.
 parser.error.incomplete-comment=XPST0003: Unclosed XQuery comment.
 parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
