XQueryParser: Implement XQuery 3.0 (A.1) [119] Wildcard.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -3,6 +3,7 @@ annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' 
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
+parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-attribute-string=XPST0003: Missing attribute string.
 parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed expression start '''{''' or keyword: {0}.
