--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -37,7 +37,6 @@ parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
 parser.error.incomplete-open-tag=XPST0003: Expected '>', '/>' or attribute name.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
-parser.error.invalid-token=XPST0003: Invalid XQuery symbol or operator.
 parser.error.mismatched-exclosed-expr=XPST0003: Closing expression block '}' without associated open expression block '{'.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
@@ -46,6 +45,7 @@ parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allow
 parser.error.qname.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a qualified name.
 parser.error.qname.wildcard-local-name=XPST0003: Wildcard local name after ':' in qualified name.
 parser.error.return-without-flwor=XPST0003: 'return' keyword in non-FLWOR expression.
+parser.error.unexpected-token=XPST0003: Unexpected token.
 parser.error.unexpected-whitespace=XPST0003: Whitespace is not allowed here.
 parser.error.unexpected-wildcard=XPST0003: Expected qualified name or identifier, not a wildcard.
 parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a wildcard.
