--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -39,6 +39,7 @@ parser.error.incomplete-string=XPST0003: Unclosed string literal.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
 parser.error.mismatched-exclosed-expr=XPST0003: Closing expression block '}' without associated open expression block '{'.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
+parser.error.multiple-marklogic-catch-clause=XPST0003: Only one MarkLogic CatchClause is allowed.
 parser.error.qname.missing-local-name=XPST0003: Missing local name after ':' in qualified name.
 parser.error.qname.missing-prefix=XPST0003: Missing prefix before ':' in qualified name.
 parser.error.qname.whitespace-after-local-part=XPST0003: Whitespace is not allowed after ':' in a qualified name.
