MarkLogic 8.0 TextTest extensions.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -6,6 +6,7 @@ parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected=XPST0003: Expected ''{0}''.
 parser.error.expected-attribute-string=XPST0003: Missing attribute string.
+parser.error.expected-either=XPST0003: Expected ''{0}'' or ''{1}''.
 parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed expression start '''{''' or keyword: {0}.
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-eof=XPST0003: Expected end of file.
