--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,9 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+inspection.group.display-name=XQuery Files
+inspection.XPST0003.unsupported-construct.description=The unsupported construct inspection reports warnings for XQuery constructs that are not supported by the specified XQuery dialect. These constructs would raise XPST0003 errors on that XQuery processor.
+inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
