Check for Reserved Function Names being used in FunctionDecl constructs.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -59,6 +59,7 @@ parser.error.wildcard.whitespace-after-local-part=XPST0003: Whitespace is not al
 parser.error.wildcard.whitespace-before-local-part=XPST0003: Whitespace is not allowed before ':' in a wildcard.
 parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix and local parts are not allowed.
 requires.error.marklogic-json-keyword-as-function-name=XPST0003: This function name conflicts with MarkLogic JSON KindTest keywords.
+requires.error.reserved-keyword-as-function-name=XPST0003: Reserved keyword used as a function name.
 requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
 requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
