XQueryParser: Implement XQuery 3.0 (A.1) [193] TypedFunctionTest.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -6,6 +6,7 @@ inspection.XPST0003.predefined-entity.description=This inspection checks for inv
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
 inspection.XPST0003.unsupported-construct.description=This inspection reports warnings for XQuery constructs that are not supported by the specified XQuery dialect. These constructs would raise XPST0003 errors on that XQuery processor.
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
+parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
