--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -26,6 +26,7 @@ parser.error.expected-option-string=XPST0003: Missing option value string.
 parser.error.expected-pi-contents=XPST0003: Processing instruction contents expected.
 parser.error.expected-pragma-contents=XPST0003: Pragma contents expected.
 parser.error.expected-prolog-body=XPST0003: Prolog header statements must be placed before 'variable', 'function' and 'option' statements.
+parser.error.expected-property-value-string=XPST0003: Missing property value string.
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
