Split the Saxon implementation into Home, Professional and Enterprise Editions. Use the product version as the version string (currently only 9.7).

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -67,13 +67,13 @@ requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQu
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
 requires.feature.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 xquery.files.filetype.description=XQuery Language Support
-# suppress inspection "UnusedProperty"
-xquery.implementation.enterprise-edition=Enterprise Edition
-# suppress inspection "UnusedProperty"
-xquery.implementation.home-edition=Home Edition
 xquery.implementation.not-supported=Not Supported
 # suppress inspection "UnusedProperty"
-xquery.implementation.professional-edition=Professional Edition
+xquery.implementation.saxon.enterprise-edition=Saxon Enterprise Edition
+# suppress inspection "UnusedProperty"
+xquery.implementation.saxon.home-edition=Saxon Home Edition
+# suppress inspection "UnusedProperty"
+xquery.implementation.saxon.professional-edition=Saxon Professional Edition
 # suppress inspection "UnusedProperty"
 xquery.implementation.specification=Specification
 # suppress inspection "UnusedProperty"
