--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ allprojects {
     apply plugin: 'jacoco'
 
     group 'uk.co.reecedunn.intellij.plugin.xquery'
-    version '0.2-dev'
+    version '0.2'
 
     repositories {
         mavenCentral()
