--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,10 +10,12 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <p>Release 0.1:</p>
+    <p>Release 0.2:</p>
     <ul>
-      <li>XQuery file type support, including encoding detection.</li>
-      <li>Conforming XQuery 1.0 syntax highlighter and parser.</li>
+      <li>XQuery 3.0 support.</li>
+      <li>MarkLogic extended syntax support.</li>
+      <li>IntelliJ resolve support for URI literals, namespaces, functions and variables.</li>
+      <li>IntelliJ find usages support.</li>
     </ul>
   ]]></change-notes>
 
