--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -19,6 +19,7 @@ parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
+parser.error.expected-map-entry-assign=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
 parser.error.expected-module-type=XPST0003: Missing library 'module' declaration or main module query body.
 parser.error.expected-ncname=XPST0003: Missing identifier.
 parser.error.expected-ncname-not-qname=XPST0003: Expected an identifier not a qualified name.
@@ -66,6 +67,8 @@ requires.error.reserved-keyword-as-function-name=XPST0003: Reserved keyword used
 requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
 requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
+requires.feature.saxon-map-entry-assign.version=XPST0003: Use ':=' for Saxon 9.4 to 9.6, and ':' for XQuery 3.1 and MarkLogic.
+requires.feature.saxon-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or Saxon 9.4 or later.
 requires.feature.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.not-supported=Not Supported
