--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -17,6 +17,7 @@ parser.error.expected-enclosed-expression-or-keyword=XPST0003: Missing enclosed 
 parser.error.expected-encoding-string=XPST0003: Missing encoding string.
 parser.error.expected-eof=XPST0003: Expected end of file.
 parser.error.expected-eqname=XPST0003: Missing qualified name or braced URI qualified name.
+parser.error.expected-eqname-or-token=XPST0003: Missing qualified name, braced URI qualified name or ''{0}''.
 parser.error.expected-expression=XPST0003: Missing expression.
 parser.error.expected-keyword=XPST0003: Expected keyword: {0}.
 parser.error.expected-map-entry-assign=XPST0003: Expected ':' (XQuery 3.1/MarkLogic) or ':=' (Saxon 9.4-9.6).
