--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -46,6 +46,7 @@ parser.error.incomplete-double-exponent=XPST0003: Incomplete double exponent.
 parser.error.incomplete-entity=XPST0003: Invalid entity reference character.
 parser.error.incomplete-open-tag=XPST0003: Expected '>', '/>' or attribute name.
 parser.error.incomplete-string=XPST0003: Unclosed string literal.
+parser.error.incomplete-string-constructor=XPST0003: Unclosed string constructor.
 parser.error.incomplete-xml-comment=XPST0003: Unclosed XML comment.
 parser.error.mismatched-exclosed-expr=XPST0003: Closing expression block '}' without associated open expression block '{'.
 parser.error.misplaced-entity=XPST0003: Entity references are not allowed here.
