Use 'Identifier' instead of the PSI class name in the Find Usages UI.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -1,6 +1,7 @@
 annotator.string-literal.html4-entity=XPST0003: HTML4 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.html5-entity=XPST0003: HTML5 predefined entity ''{0}'' is not allowed in this XQuery version.
 annotator.string-literal.unknown-xml-entity=XPST0003: Predefined entity ''{0}'' is not a known entity name.
+find-usages.identifier=Identifier
 inspection.group.display-name=XQuery Files
 inspection.XPST0003.predefined-entity.description=This inspection checks for invalid predefined entities. These entities would raise XPST0003 errors in the XQuery processor. HTML4 and HTML5 entities are only valid in the MarkLogic 1.0-ml extended syntax.
 inspection.XPST0003.predefined-entity.display-name=Predefined entities
