--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,8 @@ src/test/resources/tests/parser/marklogic-6.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-6.0/*.xq text eol=lf
 src/test/resources/tests/parser/marklogic-8.0/*.txt text eol=lf
 src/test/resources/tests/parser/marklogic-8.0/*.xq text eol=lf
+src/test/resources/tests/parser/xqdoc/*.txt text eol=lf
+src/test/resources/tests/parser/xqdoc/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.txt text eol=lf
 src/test/resources/tests/parser/xquery-1.0/*.xq text eol=lf
 src/test/resources/tests/parser/xquery-3.0/*.txt text eol=lf
