--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ jdk:
 
 env:
   - IDEA_VERSION=LATEST-EAP-SNAPSHOT
+  - IDEA_VERSION=IC-2016.3
   - IDEA_VERSION=IC-2016.2
   - IDEA_VERSION=IC-2016.1.3
 
