XQueryParser: Implement XQuery Scripting Extension 1.0 (A.1) [24] VarDecl.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -74,6 +74,7 @@ requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQu
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
 requires.feature.saxon-map-entry-assign.version=XPST0003: Use ':=' for Saxon 9.4 to 9.6, and ':' for XQuery 3.1 and MarkLogic.
 requires.feature.saxon-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or Saxon 9.4 or later.
+requires.feature.scripting.version=XPST0003: This expression requires Scripting Extension {0} or later.
 requires.feature.update-facility.version=XPST0003: This expression requires Update Facility {0} or later.
 xquery.files.filetype.description=XQuery Language Support
 xquery.implementation.not-supported=Not Supported
