--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -34,6 +34,8 @@ parser.error.expected-property-value-string=XPST0003: Missing property value str
 parser.error.expected-qname=XPST0003: Missing qualified name.
 parser.error.expected-query-body=XPST0003: Missing query body.
 parser.error.expected-uri-string=XPST0003: Missing URI string.
+parser.error.expected-variable-assign-scripting=XPST0003: Missing ':=' variable assignment, ',' or ';'.
+parser.error.expected-variable-assign-scripting-no-type-decl=XPST0003: Missing ':=' variable assignment, 'at', ',' or ';'.
 parser.error.expected-variable-assign-or-keyword=XPST0003: Missing variable assignment operator ''':=''' or keyword: {0}.
 parser.error.expected-variable-reference-or-keyword=XPST0003: Missing variable reference marker '''$''' or keyword: {0}.
 parser.error.expected-variable-value=XPST0003: Missing ':=' variable assignment or 'external' keyword.
