--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -71,6 +71,7 @@ parser.error.wildcard.both-prefix-and-local-wildcard=XPST0003: Wildcard prefix a
 requires.empty-expression.version=XPST0003: Empty enclosed expressions requires XQuery {0} or later.
 requires.error.marklogic-json-keyword-as-function-name=XPST0003: This function name conflicts with MarkLogic JSON KindTest keywords.
 requires.error.reserved-keyword-as-function-name=XPST0003: Reserved keyword used as a function name.
+requires.error.scripting-keyword-as-function-name=XPST0003: Reserved Scripting Extension {0} keyword used as a function name.
 requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
 requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
