--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -116,6 +116,7 @@ xquery.settings.colors.xml.entity.reference=Direct XML Construction//Entity Refe
 xquery.settings.colors.xml.escaped.character=Direct XML Construction//Escaped Character
 xquery.settings.colors.xqdoc.markup=xqDoc//Markup
 xquery.settings.colors.xqdoc.tag=xqDoc//Tag
+xquery.settings.colors.xqdoc.tag-value=xqDoc//Tag Value
 xquery.settings.project.implementation.label=Implementation:
 xquery.settings.project.implementation.version.label=Implementation version:
 xquery.settings.project.default.version.label=Default XQuery version:
