--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,19 +10,19 @@
   ]]></description>
 
   <change-notes><![CDATA[
-    <h3>Release 0.3:</h3>
-    <h4>Language Support:</h4>
+    <h3>Release 0.4:</h3>
+    <p>Language Support:</p>
     <ol>
-      <li>Complete support for XQuery 3.1 constructs.</li>
-      <li>Complete support for Update Facility 3.0 extensions.</li>
-      <li>Improved error reporting on unbalanced XML (<code>DirElemConstructor</code> parsing).</li>
-      <li>Support for xqDoc documentation comments.</li>
+      <li>Complete support for XQuery Scripting Extensions 1.0.</li>
+      <li>Support highlighting xqDoc parameter names.</li>
+      <li>Support highlighting XML <code>PredefinedEntityRef</code> and <code>CharRef</code> tokens in xqDoc comments.</li>
+      <li>Support BaseX 7.8 and 8.5 `update` expressions.</li>
     </ol>
-    <h4>IntelliJ Integration:</h4>
+    <p>Bug Fixes:</p>
     <ol>
-      <li>Paired brace matching.</li>
-      <li>Commenting code support.</li>
-      <li>Fixed <code>VersionDecl</code> conformance checks on invalid version strings.</li>
+      <li>Don't crash when resolving an empty <code>URILiteral</code> in an import statement.</li>
+      <li>Fix highlighting <code>:</code> at the start of a line in xqDoc comments.</li>
+      <li><code>array-node {}</code> is valid in MarkLogic 8.0.</li>
     </ol>
   ]]></change-notes>
 
