MarkLogic 9 (EAP) supports XQuery 3.1 ArrowExpr constructs.

--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -75,6 +75,7 @@ requires.error.scripting-keyword-as-function-name=XPST0003: Reserved Scripting E
 requires.feature.basex.version=XPST0003: This expression requires BaseX {0} or later.
 requires.feature.marklogic.version=XPST0003: This expression requires MarkLogic {0} or later with XQuery version ''1.0-ml''.
 requires.feature.marklogic-xquery.version=XPST0003: This expression requires XQuery 3.0 or later, or MarkLogic 6.0 or later with XQuery version '1.0-ml'.
+requires.feature.marklogic-9-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or MarkLogic 9.0 or later with XQuery version '1.0-ml'.
 requires.feature.minimal-conformance.version=XPST0003: This expression requires XQuery {0} or later.
 requires.feature.saxon-map-entry-assign.version=XPST0003: Use ':=' for Saxon 9.4 to 9.6, and ':' for XQuery 3.1 and MarkLogic.
 requires.feature.saxon-xquery.version=XPST0003: This expression requires XQuery 3.1 or later, or Saxon 9.4 or later.
