--- a/src/main/resources/messages/XQueryBundle.properties
+++ b/src/main/resources/messages/XQueryBundle.properties
@@ -9,6 +9,7 @@ inspection.XPST0003.unsupported-construct.description=This inspection reports wa
 inspection.XPST0003.unsupported-construct.display-name=Unsupported XQuery construct
 parser.error.as-not-supported-in-test=XPST0003: Return type specifiers not supported in ''{0}''.
 parser.error.cdata-section-not-in-element-content=XPST0003: CDATA sections must be placed within element tags.
+parser.error.comparison-no-lhs-or-direlem=XPST0003: Comparison without left-hand expression, or incomplete direct element constructor.
 parser.error.empty-entity=XPST0003: Entity references must not be empty.
 parser.error.eqname.wildcard-local-name=XPST0003: Wildcard local name after '}' in braced URI qualified name.
 parser.error.expected=XPST0003: Expected ''{0}''.
