--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+src/test/resources/tests/folding/*.xq text eol=lf
 src/test/resources/tests/parser/basex-7.8/*.txt text eol=lf
 src/test/resources/tests/parser/basex-7.8/*.xq text eol=lf
 src/test/resources/tests/parser/basex-8.5/*.txt text eol=lf
