Create a MarkLogic XCC session object from the run configuration.

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 
 dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0-M4'
+    compile 'com.marklogic:marklogic-xcc:9.0.2'
 }
 
 intellij {
